connect redis to docker-compose + update redis port to 6380

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,8 @@ version: '2'
 services:
   producer-consumer:
     build: .
-    # depends_on:
-    # - redis
-    # build: .
-    # command: go run main.go
+    links:
+    - redis
   redis:
     image: "redis"
     ports:
