--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,9 @@ version: '2'
 services:
   producer-consumer:
     build: .
+    links:
+    - redis
   redis:
     image: "redis"
     ports:
     - "6380:6380"
-    volumes_from:
-    - producer-consumer
-    expose:
-    - "6380"
