--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '2'
 services:
   app:
     build: .
-    links:
-    - redis
   redis:
     image: "redis"
     ports:
     - "6380:6380"
+    networks:
+    - redis
