--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: '2'
 services:
-  app:
+  producer-consumer:
     build: .
+    links:
+    - redis
+    environment:
+      REDIS_URL: redis:6380
   redis:
     image: "redis"
     ports:
     - "6380:6380"
-    networks:
-    - app
